Improved recall and precision based on GIAB dataset